shelter/pages/main/style.scss
@import "normalize.css";
@import "../pets/pets.scss";
// fonts

@font-face {
  font-family: "Georgia";
  src: url("../../assets/fonts/Georgia.eot");
  src: url("../../assets/fonts/Georgia.eot?#iefix") format("embedded-opentype"),
    url("../../assets/fonts/Georgia.woff") format("woff"),
    url("../../assets/fonts/Georgia.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

// VARIABLES

$font-geor: "Georgia";
$color-pr: #f1cdb3;

// DEFAULT
h5,
h2,
h3,
h4 {
  font-weight: normal;
}
a {
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  &:active {
    color: $color-pr;
  }
}
* {
  box-sizing: border-box;
}
body {
  font-family: $font-geor;
  position: relative;
  
  
}
.container {
  overflow-x: hidden;
  max-width: 1280px;
  padding: 0 40px;
  width: 100%;
  margin: 0 auto;
  display: flex;
  justify-content: center;
  align-items: center;
  
  @media screen and (max-width: 768px) {
    padding: 0 30px;
  }
  @media screen and (max-width: 320px) {
    padding: 0 10px;
  }
}
button {
  cursor: pointer;
}
.button {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 15px 45px;
  border-radius: 100px;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;

  &:hover {
    background-color: #fddcc4;
  }
}

// HEADER CSS
.header {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  overflow: hidden;
}
.header__wrapper {
  padding-top: 60px;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  
  @media screen and (max-width: 767px) {
    padding-top: 30px;
    justify-content: flex-end;
    column-gap: 41px;
  }
  @media screen and (max-width: 768px) {
    padding-top: 30px;
    
  }
  @media screen and (max-width: 320px) {
    justify-content: flex-start;
  }

}
.header__logo {
  display: flex;
  flex-direction: column;
  align-items: center;
  row-gap: 10px;
  @media screen and (max-width: 767px) {
    z-index: 100;
  }
}
.header__logo-name {
  font-weight: 400;
  & > a {
    color: $color-pr;
  }

  font-size: 32px;
  line-height: 110%;

  letter-spacing: 0.06em;
  
}
.header__logo-subname {
  font-size: 13px;
  line-height: 15px;
  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
  color: #ffffff;
  letter-spacing: 0.1em;
}
.header__nav {
  transition: all 0.5s ease-out;
  @media screen and (max-width: 767px) {
    z-index: 99;
    position: absolute;
    top: 0;
    bottom: 0;
    overflow-y: hidden;
    width: 320px;
    background: #292929;
    right: -320px;
    
    height: 100vh;
    transition: all 0.5s ease-in;
  }
}
.header__burger {
  display: none;
  @media screen and (max-width: 767px) {
    display: block;
    position: relative;
    z-index: 300;
    transition: all 0.5s ease-in;
  }
  &.activeBurger {
    transform: rotate(-90deg);
    transition: all 0.5s ease-out;
  }
}
.header__links {
  list-style: none;
  display: flex;
  @media screen and (max-width: 767px) {
    flex-direction: column;
    position: relative;
    top: 50%;
    column-gap: 40px;
    justify-content: center;
    align-items: center;
    transform: translateY(-50%);
  }
}
.header__link {
  font-size: 15px;
  line-height: 160%;

  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
  margin-left: 35px;
  @media screen and (max-width: 767px) {
    font-size: 32px;
    line-height: 160%;
    color: #fafafa;
    margin-left: 0;
  }

  &:hover {
    color: #fafafa;
  }
}

.nav__link.active {
  padding-bottom: 3px;
  border-bottom: 3px solid #f1cdb3;
}

// header media burger

// MAIN CSS

.main {
  &-screen {
    padding-top: 180px;
    background: rgb(91, 72, 58);
    background: linear-gradient(
      120deg,
      rgba(91, 72, 58, 1) 0%,
      rgba(38, 36, 37, 1) 60%
    );
    @media screen and (max-width: 768px) {
      padding-top: 90px;
    }
  }
}

.main__wrapper {
  width: 100%;
  height: calc(908px- 180px);
  display: flex;
  justify-content: space-between;
  @media screen and (max-width: 768px) {
    flex-direction: column;
    align-items: center;
    height: calc(1165px - 90px);
    justify-content: space-between;
  }
  @media screen and (max-width: 320px) {
    flex-direction: column;
    align-items: center;
    height: calc(823px - 90px);
    justify-content: space-between;
  }
}
.main__info {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  max-width: 460px;
  height: 322px;
  @media (max-width: 1280px) {
    margin-top: calc(163px);
  }
  @media screen and (max-width: 768px) {
    margin-top: 60px;
    row-gap: 42px;   
  }
  @media screen and (max-width: 320px) {
    align-items: center;

    max-height: 296px;
  }
  
}
.main__title {
  color: #ffffff;
  line-height: 130%;
  font-size: 44px;
  max-width: 310px;
  font-weight: 400;
  
  @media screen and (max-width: 320px) {
    font-size: 25px;
    text-align: center;
    max-width: 260px;
    letter-spacing: 0.06em;
  }
}
.main__subtitle {
  font-size: 15px;
  line-height: 160%;
  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
  color: #cdcdcd;
  @media screen and (max-width: 320px) {

    text-align: center;

  }
}
.main__button {
  font-size: 17px;
  line-height: 130%;
  letter-spacing: 0.06em;
  color: #292929;
  background-color: #f1cdb3;

  &:hover {
    background-color: #fddcc4;
  }
  @media screen and (max-width: 768px) {
    align-self: center;
  }
}

.main__image {
  background: url("../../assets/images/start-screen-puppy.png") no-repeat bottom/contain;
  max-width: 698px;
  width: 100%;
  height: calc(908px - 180px);
  @media screen and (max-width: 768px) {
    height: 593px;
    background-position: right;
  }
  @media screen and (max-width: 320px) {
    height: 271px;
  }
}
/* ... */

